# memory-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  __main__.py  canonical.py  config.py  db.py  identity.py  server.py  tools.py
scripts/: install.ps1  run_pytest.py  run_tests.py  start-memory-mcp.bat
tests/: conftest.py  test_db.py  test_tools.py
